partial styling of header and added media queries

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,4 +1,7 @@
 @charset "utf-8";
 @import "normalize";
+@import "global";
+@import "media-queries";
+@import "header";
 @import "bootstrap-sprockets";
 @import "bootstrap";
