header styled up

--- a/source/stylesheets/_global.css.scss
+++ b/source/stylesheets/_global.css.scss
@@ -1,5 +1,6 @@
 body{
 	background-image: url('https://s3.amazonaws.com/myfangate.com/wagewar/background.jpg');
+	overflow-x: hidden;
 }
 .full-w{
 	width: 100%;
