setup video section and fonts

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
 @import "normalize";
 @import "global";
-@import "media-queries";
-@import "header";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "header";
+@import "video";
+@import "media-queries";
