--- a/source/stylesheets/_media-queries.css.scss
+++ b/source/stylesheets/_media-queries.css.scss
@@ -2,22 +2,45 @@
 
     /* Custom, iPhone Retina */ 
     @media only screen and (min-width : 320px) {
-
+        h2{
+            font-size: 10px;
+        }
+        .cta{
+            h2{
+                line-height: 2px;
+            }
+        }
     }
 
     /* Extra Small Devices, Phones */ 
     @media only screen and (min-width : 480px) {
-
+        h2{
+            font-size: 13px;
+        }
+        .cta{
+            h2{
+                line-height: 2px;
+            }
+        }        
     }
 
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
-
+        h2{
+            font-size: 20px;
+        }
     }
 
     /* Medium Devices, Desktops */
     @media only screen and (min-width : 992px) {
-
+        h2{
+            font-size: 25px;
+        }
+        .cta{
+            h2{
+                line-height: 5px;
+            }
+        }        
     }
 
     /* Large Devices, Wide Screens */
