--- a/source/partials/_video.html.erb
+++ b/source/partials/_video.html.erb
@@ -2,10 +2,10 @@
 	<div class="row">
 		<div class="col-lg-12 text-center tan shadow cta">
 			<h2>SHARE THE MUSIC VIDEO FOR <span class="blue">“TWENTYONE”</span></h2>
-			<h2>AND WIN A SIGNED [FENDER LOGO] STRATOSPHERE</h2>
+			<h2>AND WIN A SIGNED <img class="fender-logo" src="https://s3.amazonaws.com/myfangate.com/wagewar/tan-logo.png"> STRATOSPHERE</h2>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row video">
 		<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
 			<div class="embed-responsive embed-responsive-16by9 border">
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CGqP5LDa6GU?rel=0"></iframe>
