added bundles partial

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,4 @@
 <%= partial 'partials/header' %>
 <%= partial 'partials/video' %>
 <%= partial 'partials/contest' %>
+<%= partial 'partials/bundles' %>
