updated bundles and added shadow to h2

--- a/source/partials/_bundles.html.erb
+++ b/source/partials/_bundles.html.erb
@@ -1,25 +1,37 @@
 <div id="bundles" class="container">
 	<div class="row">
 	  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
-	  		<h2 class="tan">Pre-Order Bundles Are Available</h2>
+	  		<h2 class="tan shadow">Pre-Order Bundles Are Available</h2>
 	  	</div>  
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>				
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-			<img class="full-w" src="<%= lorem.image('640x640') %>">
-		</div>				
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle1_web.jpg">
+			</div>
+		</a>
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle2_web.jpg">
+			</div>
+		</a>
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle3_web.jpg">
+			</div>				
+		</a>
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle4_web.jpg">
+			</div>
+		</a>
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/CD_web.jpg">
+			</div>
+		</a>
+		<a href="http://wagewar.merchnow.com/" target="_blank">
+			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
+				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Vinyl_web.jpg">
+			</div>				
+		</a>
 	</div>	
 </div>
