--- a/source/partials/_contest.html.erb
+++ b/source/partials/_contest.html.erb
@@ -1,6 +1,6 @@
 <div class="container contest">
   <div class="row text-center">
-  	<div class="col-lg-10 col-lg-offset-1">
+  	<div class="col-lg-10 col-lg-offset-1 shadow">
   		<h2 class="tan">ENTER YOUR INFORMATION TO WIN</h2>
   	</div>  
     <div class="col-lg-5 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-sm-push-6 col-xs-12">
