added box shadows

--- a/source/partials/_bundles.html.erb
+++ b/source/partials/_bundles.html.erb
@@ -5,32 +5,32 @@
 	  	</div>  
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle1_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle1_web.jpg">
 			</div>
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle2_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle2_web.jpg">
 			</div>
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle3_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle3_web.jpg">
 			</div>				
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle4_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle4_web.jpg">
 			</div>
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/CD_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/CD_web.jpg">
 			</div>
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
-				<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/Vinyl_web.jpg">
+				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Vinyl_web.jpg">
 			</div>				
 		</a>
 	</div>	
