--- a/source/partials/_video.html.erb
+++ b/source/partials/_video.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="row video">
 		<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
-			<div class="embed-responsive embed-responsive-16by9 border">
+			<div class="embed-responsive embed-responsive-16by9 border box-shadow">
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CGqP5LDa6GU?rel=0"></iframe>
 			</div>
 		</div>
