added social wall and fixed responsive header because iOS is terrible

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,7 @@
-<%= partial 'partials/header' %>
-<%= partial 'partials/video' %>
-<%= partial 'partials/contest' %>
-<%= partial 'partials/bundles' %>
+<div id="wrapper">
+	<%= partial 'partials/header' %>
+	<%= partial 'partials/video' %>
+	<%= partial 'partials/contest' %>
+	<%= partial 'partials/bundles' %>
+	<%= partial 'partials/social' %>
+</div>
