--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -8,4 +8,7 @@
 @import "contest";
 @import "sharecontest-v1";
 @import "bundles";
+@import "social";
+@import "vendor/dcsns_wall";
+@import "social-wall-overrides";
 @import "media-queries";
