--- a/source/stylesheets/_global.css.scss
+++ b/source/stylesheets/_global.css.scss
@@ -12,6 +12,9 @@ $blue: #748a8b;
     font-style: normal;
 
 }
+html, body, body#wrapper{
+    overflow-x: hidden !important;
+}
 body{
 	background-image: url('https://s3.amazonaws.com/myfangate.com/wagewar/background.jpg');
 	overflow-x: hidden;
