--- a/source/stylesheets/_header.css.scss
+++ b/source/stylesheets/_header.css.scss
@@ -1,8 +1,3 @@
-.promo{
-	width: 120%;
-	margin-left: -10%;
-}
-.new-album{            
-    margin-top: -37%;
-    margin-bottom: 100px;
+#header{
+	// overflow-x: hidden;
 }
