--- a/source/stylesheets/_media-queries.css.scss
+++ b/source/stylesheets/_media-queries.css.scss
@@ -23,6 +23,9 @@
         .new-album{            
             margin-top: -25%;
             margin-bottom: 100px;
+        }
+        #contest{
+            margin-top: 0px;
         }               
     }
 
@@ -49,6 +52,9 @@
         .new-album{            
             margin-top: -37%;
             margin-bottom: 100px;
+        }
+        #contest{
+            margin-top: 60px;
         }                             
     }
 
@@ -70,7 +76,10 @@
         .new-album{            
             margin-top: -37%;
             margin-bottom: 100px;
-        }                          
+        }
+        #contest{
+            margin-top: 60px;
+        }                                     
     }
 
     /* Medium Devices, Desktops */
@@ -90,7 +99,10 @@
         .new-album{            
             margin-top: -37%;
             margin-bottom: 100px;
-        }                
+        }
+        #contest{
+            margin-top: 100px;
+        }                        
     }
 
     /* Large Devices, Wide Screens */
