--- a/source/partials/_bundles.html.erb
+++ b/source/partials/_bundles.html.erb
@@ -33,5 +33,8 @@
 				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Vinyl_web.jpg">
 			</div>				
 		</a>
-	</div>	
+	</div>
+  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
+  		<h2 class="tan shadow">PRE-ORDER ‘BLUEPRINTS ON APPLE MUSIC AND RECEIVE <span class="blue">“ALIVE”</span> AND <span class="blue">“TWENTYONE”</span> INSTANTLY</h2>
+  	</div> 
 </div>
