--- a/source/partials/_social.html.erb
+++ b/source/partials/_social.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 text-center">
-      <h2 class="tan shadow join">JOIN THE #TWENTYONE COMMUNITY</h2>
+      <h2 class="tan shadow join">JOIN THE <span class="blue">#TWENTYONE COMMUNITY</span></h2>
     </div>
   </div>
   <div class="row">
