footer done / meta added but not set up

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,4 +4,5 @@
 	<%= partial 'partials/contest' %>
 	<%= partial 'partials/bundles' %>
 	<%= partial 'partials/social' %>
+	<%= partial 'partials/footer' %>
 </div>
