--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+    <%= partial 'partials/meta-seo' %>
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "The Middleman" %></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
     <!-- Stylesheets -->
     <%= stylesheet_link_tag "all" %>
