--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -23,7 +23,7 @@
       <i id="youtube" class="social-icon fa fa-youtube fa-stack-1x fa-inverse"></i>
     </span>
   </a>    
-  <img src="https://s3.amazonaws.com/myfangate.com/blessthefall/esp_logo.png" width="50">  
+  <img src="https://s3.amazonaws.com/myfangate.com/wagewar/tan-logo.png" width="50">  
   <a href="http://fearlessrecords.com/" target="_blank">
     <img src="https://s3.amazonaws.com/myfangate.com/blessthefall/fearlessrecords.png" width="50">
   </a>
