--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,13 +23,13 @@
       // init contest //
       $("#contest").shareContestFB({
         context: {
-          fbAppId: "132860210391783",
-          fbShareTitle: "WIN A CUSTOM GUITAR FROM BLESSTHEFALL",
-          fbShareLink: "http://fngt.it/Btfguitar/f",
-          fbImageUrl: "https://s3.amazonaws.com/myfangate.com/blessthefall/shareimage.jpg",
-          fbSubText: "http://fngt.it/Btfguitar/f",
-          fbDialog: "Enter to win a custom guitar!",
-          formActionUrlId: "14T07ObbSeOFd8rbgWoOtfx1Vxv2D_ZqUdIAZFRW0Dow",
+          fbAppId: "1492821724366819",
+          fbShareTitle: "WIN A FENDER STRATOSPHERE FROM WAGE WAR",
+          fbShareLink: "http://wagewarband.com/twentyone",
+          fbImageUrl: "https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg",
+          fbSubText: "http://wagewarband.com/twentyone",
+          fbDialog: "SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOSPHERE",
+          formActionUrlId: "1YOkCdLQiBprJR6v82MN2J_ZNQkWhw7AfGYYgsqZj4yo",
           firstNameId: "749925490",
           lastNameId: "453795809",
           emailId: "1493557255",
