--- a/source/partials/_meta-seo.html.erb
+++ b/source/partials/_meta-seo.html.erb
@@ -8,20 +8,20 @@
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="WAGE WAR | VIDEO SHARE SWEEPSTAKES">
 <meta itemprop="description" content="SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOSPHERE">
-<meta itemprop="image" content="https://s3.amazonaws.com/myfangate.com/blessthefall/shareimage.jpg">
+<meta itemprop="image" content="https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg">
 
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@blessthefall">
+<meta name="twitter:site" content="@wagewarofficial">
 <meta name="twitter:title" content="WAGE WAR | VIDEO SHARE SWEEPSTAKES">
 <meta name="twitter:description" content="SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOSPHERE">
-<meta name="twitter:creator" content="@blessthefall">
-<meta name="twitter:image" content="https://s3.amazonaws.com/myfangate.com/blessthefall/shareimage.jpg">
+<meta name="twitter:creator" content="@wagewarofficial">
+<meta name="twitter:image" content="https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg">
 
 <!-- Open Graph data -->
 <meta property="og:title" content="WAGE WAR | VIDEO SHARE SWEEPSTAKES" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://blessthefallmusic.com/walkonwater" />
-<meta property="og:image" content="https://s3.amazonaws.com/myfangate.com/blessthefall/shareimage.jpg" />
+<meta property="og:url" content="http://wwww.wagewarband.com/twentyone" />
+<meta property="og:image" content="https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg" />
 <meta property="og:description" content="SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOSPHERE" />
 <meta property="og:site_name" content="WAGE WAR" />
