fixed stratocaster typo

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,11 +34,11 @@
       $("#contest").shareContestFB({
         context: {
           fbAppId: "1492821724366819",
-          fbShareTitle: "WIN A FENDER STRATOSPHERE FROM WAGE WAR",
+          fbShareTitle: "WIN A FENDER STRATOCASTER FROM WAGE WAR",
           fbShareLink: "http://wagewarband.com/twentyone",
           fbImageUrl: "https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg",
           fbSubText: "http://wagewarband.com/twentyone",
-          fbDialog: "SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOSPHERE",
+          fbDialog: "SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOCASTER",
           formActionUrlId: "1YOkCdLQiBprJR6v82MN2J_ZNQkWhw7AfGYYgsqZj4yo",
           firstNameId: "749925490",
           lastNameId: "453795809",
