--- a/source/partials/_video.html.erb
+++ b/source/partials/_video.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-lg-12 text-center tan shadow cta">
 			<h2>SHARE THE MUSIC VIDEO FOR <span class="blue">“TWENTYONE”</span></h2>
-			<h2>AND WIN A SIGNED <img class="fender-logo" src="https://s3.amazonaws.com/myfangate.com/wagewar/tan-logo.png"> STRATOSPHERE</h2>
+			<h2>AND WIN A SIGNED <img class="fender-logo" src="https://s3.amazonaws.com/myfangate.com/wagewar/tan-logo.png"> STRATOCASTER</h2>
 		</div>
 	</div>
 	<div class="row video">
