removed social, added itunes button, renamed 21

--- a/source/partials/_bundles.html.erb
+++ b/source/partials/_bundles.html.erb
@@ -34,7 +34,12 @@
 			</div>				
 		</a>
 	</div>
-  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
-  		<h2 class="tan shadow">PRE-ORDER ‘BLUEPRINTS ON APPLE MUSIC AND RECEIVE <span class="blue">“ALIVE”</span> AND <span class="blue">“TWENTYONE”</span> INSTANTLY</h2>
-  	</div> 
+  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header text-center">
+  		<h2 class="tan shadow">PRE-ORDER ‘BLUEPRINTS' ON APPLE MUSIC AND RECEIVE <span class="blue">“TWENTY ONE”</span> AND <span class="blue">“ALIVE”</span> INSTANTLY</h2>
+  	</div>
+  	<div class="col-lg-4 col-lg-offset-4 text-center">
+		<a href="http://smarturl.it/wwblueprints" target="_blank">
+			<img class="box-shadow itunes" src="https://s3.amazonaws.com/myfangate.com/wagewar/itunes.png">
+		</a>
+  	</div>
 </div>
