--- a/source/stylesheets/_video.css.scss
+++ b/source/stylesheets/_video.css.scss
@@ -1,6 +1,6 @@
 .cta{
-    margin-top: -100px;
-    margin-bottom: 20px;
+    // margin-top: -100px;
+    // margin-bottom: 20px;
     h2{
         line-height: 10px;
 
@@ -10,5 +10,5 @@
     max-width: 90px;
 }
 .video{
-    margin-top: 0px;
+    margin-top: -80px !important;
 }  
