updated share url

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,9 +35,9 @@
         context: {
           fbAppId: "1492821724366819",
           fbShareTitle: "WIN A FENDER STRATOCASTER FROM WAGE WAR",
-          fbShareLink: "http://wagewarband.com/twentyone",
+          fbShareLink: "http://fearlessrecords.com/app/webroot/wagewar/",
           fbImageUrl: "https://s3.amazonaws.com/myfangate.com/wagewar/shareimage.jpg",
-          fbSubText: "http://wagewarband.com/twentyone",
+          fbSubText: "http://fearlessrecords.com/app/webroot/wagewar/",
           fbDialog: "SHARE THE MUSIC VIDEO FOR “TWENTYONE” AND WIN A SIGNED FENDER STRATOCASTER",
           formActionUrlId: "1YOkCdLQiBprJR6v82MN2J_ZNQkWhw7AfGYYgsqZj4yo",
           firstNameId: "749925490",
