--- a/source/partials/_bundles.html.erb
+++ b/source/partials/_bundles.html.erb
@@ -1,9 +1,12 @@
 <div id="bundles" class="container">
 	<div class="row">
-	  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
+<!-- 	  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
 	  		<h2 class="tan shadow">Pre-Order Bundles Are Available</h2>
-	  	</div>  
-		<a href="http://wagewar.merchnow.com/" target="_blank">
+	  	</div>   -->
+  	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header">
+  		<h2 class="tan shadow">Out Now</h2>
+  	</div>
+<!-- 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
 				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle1_web.jpg">
 			</div>
@@ -16,7 +19,7 @@
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
 				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Bundle3_web.jpg">
-			</div>				
+			</div>
 		</a>
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
@@ -31,12 +34,12 @@
 		<a href="http://wagewar.merchnow.com/" target="_blank">
 			<div class="col-lg-4 col-md-4 col-sm-6 bundle">
 				<img class="full-w box-shadow" src="https://s3.amazonaws.com/myfangate.com/wagewar/Vinyl_web.jpg">
-			</div>				
+			</div>
 		</a>
 	</div>
   	<div class="col-lg-10 col-lg-offset-1 text-center bundle-header text-center">
   		<h2 class="tan shadow">PRE-ORDER ‘BLUEPRINTS' ON APPLE MUSIC AND RECEIVE <span class="blue">“TWENTY ONE”</span> AND <span class="blue">“ALIVE”</span> INSTANTLY</h2>
-  	</div>
+  	</div> -->
   	<div class="col-lg-4 col-lg-offset-4 text-center">
 		<a href="http://smarturl.it/wwblueprints" target="_blank">
 			<img class="box-shadow itunes" src="https://s3.amazonaws.com/myfangate.com/wagewar/itunes.png">
