--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -4,7 +4,7 @@
 			<img class="promo" src="https://s3.amazonaws.com/myfangate.com/wagewar/header2.png">
 		</div>
 		<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4 new-album">
-			<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/newalbum.png">
+			<img class="full-w" src="https://s3.amazonaws.com/myfangate.com/wagewar/outnow.png">
 		</div>
 	</div>
 </div>
